--- a/style.css
+++ b/style.css
@@ -292,3 +292,13 @@ article .btn {
     margin-top: 16px;
   }
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  box-shadow: var(--box-shadow);
+  padding: 1rem;
+  border-radius: 10px;
+}
